Refactor material handling: update service methods, add new servlet for material registration, and implement client-side form handling.